DEV-186 Animated menu icon working, overflow drawing issue solved by removing margins from the overflow element

--- a/web-app/components/menu/index.scss
+++ b/web-app/components/menu/index.scss
@@ -12,28 +12,26 @@
   top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
   z-index: 100;
 }
 
 .menu-icon-container {
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 16px;
+  left: 16px;
   width: 48px;
-  height: 48px;
 }
 
 .menu-icon {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
-
 
 
 .window {
   overflow: hidden;
   height: 100%;
+  display: inline-block;
 }
 
 .display {
